// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Malgovia entities — de-dup behavior guard > enemyTemplates catalog is unchanged 1`] = `
[
  {
    "ac": 13,
    "cha": 5,
    "con": 15,
    "condition_immunities": [
      "poisoned",
      "exhaustion",
    ],
    "cr": 0.25,
    "damage": "1d6+2",
    "damageType": "slashing",
    "dex": 14,
    "hp": 13,
    "immunities": [
      "poison",
    ],
    "int": 6,
    "name": "Skeleton Warrior",
    "resistances": [
      "piercing",
    ],
    "str": 10,
    "toHit": 4,
    "vulnerabilities": [
      "bludgeoning",
    ],
    "wis": 8,
    "xp": 50,
  },
  {
    "ac": 13,
    "cha": 6,
    "con": 10,
    "condition_immunities": [
      "poisoned",
      "charmed",
    ],
    "cr": 1,
    "damage": "2d6+2",
    "damageType": "piercing",
    "dex": 15,
    "hp": 22,
    "int": 7,
    "name": "Crypt Ghoul",
    "onHitEffect": {
      "ability": "con",
      "condition": "paralyzed",
      "dc": 10,
    },
    "str": 13,
    "toHit": 4,
    "wis": 10,
    "xp": 200,
  },
  {
    "ac": 12,
    "cha": 8,
    "con": 13,
    "condition_immunities": [
      "exhaustion",
      "frightened",
      "grappled",
      "paralyzed",
      "petrified",
      "poisoned",
      "prone",
      "restrained",
    ],
    "cr": 0.5,
    "damage": "2d6+2",
    "damageType": "necrotic",
    "dex": 14,
    "hp": 16,
    "immunities": [
      "necrotic",
      "poison",
    ],
    "int": 6,
    "name": "Shadow",
    "resistances": [
      "acid",
      "fire",
      "thunder",
      "lightning",
      "cold",
      "bludgeoning",
      "piercing",
      "slashing",
    ],
    "str": 6,
    "toHit": 4,
    "wis": 10,
    "xp": 100,
  },
  {
    "ac": 12,
    "cha": 10,
    "con": 12,
    "cr": 0.125,
    "damage": "1d6+1",
    "damageType": "slashing",
    "darkvision_ft": 0,
    "dex": 12,
    "hp": 11,
    "int": 10,
    "name": "Bandit Ruffian",
    "str": 11,
    "toHit": 3,
    "wis": 10,
    "xp": 25,
  },
  {
    "ac": 17,
    "cha": 16,
    "con": 18,
    "condition_immunities": [
      "charmed",
      "exhaustion",
      "frightened",
      "paralyzed",
      "poisoned",
    ],
    "cr": 5,
    "damage": "2d6+4",
    "damageType": "necrotic",
    "dex": 10,
    "drops": [
      "healing_potion",
      "healing_potion",
    ],
    "goldDrop": 120,
    "hp": 97,
    "immunities": [
      "poison",
      "necrotic",
    ],
    "int": 11,
    "multiattack": 2,
    "name": "Crypt Lord",
    "onHitEffect": {
      "ability": "wis",
      "condition": "frightened",
      "dc": 13,
    },
    "phases": [
      {
        "effects": [
          {
            "kind": "set_to_hit",
            "value": 9,
          },
          {
            "dice": "2d8+4",
            "kind": "set_damage",
          },
          {
            "effect": {
              "ability": "wis",
              "condition": "frightened",
              "dc": 15,
            },
            "kind": "set_on_hit_effect",
          },
        ],
        "hpPct": 50,
        "name": "Wrath of the Sealed Tomb",
        "narrative": "Bone splinters erupt from the floor around the Crypt Lord — its eye-sockets blaze. 'You will not silence me again!'",
      },
      {
        "effects": [
          {
            "amount": 25,
            "kind": "heal",
          },
          {
            "dice": "3d6+4",
            "kind": "set_damage",
          },
          {
            "kind": "set_ac",
            "value": 18,
          },
        ],
        "hpPct": 25,
        "name": "Phylactery Crack",
        "narrative": "A black gem in its breastplate fractures. Necrotic light pours into the Crypt Lord — its wounds knit closed and it lunges with renewed fury.",
      },
    ],
    "resistances": [
      "bludgeoning",
      "piercing",
      "slashing",
    ],
    "str": 18,
    "toHit": 7,
    "wis": 10,
    "xp": 1800,
  },
  {
    "ac": 13,
    "cha": 6,
    "con": 12,
    "cr": 0.25,
    "damage": "1d6+1",
    "damageType": "piercing",
    "dex": 15,
    "hp": 11,
    "int": 3,
    "name": "Frost Wolf",
    "packTactics": true,
    "resistances": [
      "cold",
    ],
    "str": 12,
    "toHit": 4,
    "wis": 12,
    "xp": 50,
  },
  {
    "ac": 11,
    "cha": 12,
    "con": 10,
    "condition_immunities": [
      "poisoned",
    ],
    "cr": 0.5,
    "damage": "1d4+2",
    "damageType": "cold",
    "dex": 13,
    "hp": 21,
    "immunities": [
      "cold",
    ],
    "int": 9,
    "name": "Ice Mephit",
    "str": 7,
    "toHit": 4,
    "vulnerabilities": [
      "fire",
    ],
    "wis": 11,
    "xp": 100,
  },
  {
    "ac": 13,
    "cha": 10,
    "con": 12,
    "cr": 0.25,
    "damage": "1d6+2",
    "damageType": "slashing",
    "darkvision_ft": 0,
    "dex": 13,
    "hp": 11,
    "int": 10,
    "name": "Snowshrouded Bandit",
    "resistances": [
      "cold",
    ],
    "str": 13,
    "toHit": 4,
    "wis": 10,
    "xp": 50,
  },
  {
    "ac": 12,
    "cha": 11,
    "con": 12,
    "cr": 0.5,
    "damage": "1d8+1",
    "damageType": "cold",
    "dex": 12,
    "hp": 17,
    "int": 10,
    "name": "Frost Cultist",
    "resistances": [
      "cold",
    ],
    "str": 11,
    "toHit": 3,
    "wis": 13,
    "xp": 100,
  },
  {
    "ac": 15,
    "castChance": 0.4,
    "cha": 13,
    "con": 16,
    "condition_immunities": [
      "frightened",
      "paralyzed",
    ],
    "cr": 4,
    "damage": "2d6+3",
    "damageType": "cold",
    "dex": 14,
    "hp": 78,
    "immunities": [
      "poison",
    ],
    "int": 17,
    "multiattack": 2,
    "name": "Frost Acolyte",
    "onHitEffect": {
      "ability": "con",
      "condition": "paralyzed",
      "dc": 13,
    },
    "phases": [
      {
        "effects": [
          {
            "kind": "set_ac",
            "value": 17,
          },
          {
            "dice": "2d8+3",
            "kind": "set_damage",
          },
        ],
        "hpPct": 60,
        "name": "Ice Armor",
        "narrative": "The Acolyte hisses a hard syllable and frost rimes their robes — blows skid off. Around them the ritual flame burns colder.",
      },
      {
        "effects": [
          {
            "kind": "set_to_hit",
            "value": 8,
          },
          {
            "kind": "set_multiattack",
            "value": 3,
          },
          {
            "effect": {
              "ability": "con",
              "condition": "paralyzed",
              "dc": 15,
            },
            "kind": "set_on_hit_effect",
          },
        ],
        "hpPct": 30,
        "name": "Frostbinding",
        "narrative": "The Acolyte tears off their frost cloak. Black ice spreads beneath their feet. Their staff lashes with bone-cold speed.",
      },
    ],
    "resistances": [
      "cold",
    ],
    "spellAttackBonus": 5,
    "spellSaveDC": 13,
    "spells": [
      "fire_bolt",
    ],
    "str": 12,
    "toHit": 6,
    "vulnerabilities": [
      "fire",
    ],
    "wis": 14,
    "xp": 1100,
  },
  {
    "ac": 13,
    "cha": 6,
    "con": 12,
    "cr": 0.25,
    "damage": "2d4+2",
    "damageType": "piercing",
    "dex": 15,
    "hp": 11,
    "int": 10,
    "name": "Awakened Wolf",
    "packTactics": true,
    "str": 12,
    "toHit": 4,
    "wis": 12,
    "xp": 50,
  },
  {
    "ac": 14,
    "cha": 4,
    "con": 11,
    "cr": 0.25,
    "damage": "1d8",
    "damageType": "piercing",
    "dex": 16,
    "hp": 13,
    "int": 2,
    "name": "Giant Spider",
    "onHitEffect": {
      "ability": "con",
      "condition": "poisoned",
      "dc": 11,
    },
    "str": 8,
    "toHit": 5,
    "wis": 11,
    "xp": 100,
  },
  {
    "ac": 11,
    "cha": 7,
    "con": 16,
    "cr": 1,
    "damage": "2d6+4",
    "damageType": "slashing",
    "dex": 10,
    "hp": 34,
    "int": 2,
    "multiattack": 2,
    "name": "Brown Bear",
    "str": 19,
    "toHit": 5,
    "wis": 13,
    "xp": 200,
  },
  {
    "ac": 14,
    "castChance": 0.3,
    "cha": 16,
    "con": 14,
    "cr": 4,
    "damage": "1d6+3",
    "damageType": "piercing",
    "dex": 17,
    "hp": 60,
    "int": 14,
    "multiattack": 2,
    "name": "Fey Trickster",
    "onHitEffect": {
      "ability": "wis",
      "condition": "charmed",
      "dc": 13,
    },
    "spellSaveDC": 13,
    "spells": [
      "hex",
    ],
    "str": 10,
    "toHit": 5,
    "wis": 13,
    "xp": 1100,
  },
]
`;

exports[`Malgovia entities — de-dup behavior guard > per-room enemy placements are unchanged 1`] = `
{
  "ancient_oak": [
    {
      "ac": 14,
      "castChance": 0.3,
      "cha": 16,
      "con": 14,
      "damage": "1d6+3",
      "damageType": "piercing",
      "dex": 17,
      "hp": 60,
      "id": "ancient_oak#0",
      "int": 14,
      "multiattack": 2,
      "name": "Fey Trickster",
      "onHitEffect": {
        "ability": "wis",
        "condition": "charmed",
        "dc": 13,
      },
      "spellSaveDC": 13,
      "spells": [
        "hex",
      ],
      "str": 10,
      "toHit": 5,
      "wis": 13,
      "xp": 1100,
    },
    {
      "ac": 11,
      "cha": 7,
      "con": 16,
      "damage": "2d6+4",
      "dex": 10,
      "hp": 34,
      "id": "ancient_oak#1",
      "int": 2,
      "multiattack": 2,
      "name": "Brown Bear",
      "str": 19,
      "toHit": 5,
      "wis": 13,
      "xp": 200,
    },
  ],
  "bandit_camp": [
    {
      "ac": 12,
      "damage": "1d6+1",
      "drops": [
        "dagger",
      ],
      "goldDrop": 9,
      "hp": 11,
      "id": "bandit_camp#0",
      "name": "Bandit Ruffian",
      "toHit": 3,
      "xp": 25,
    },
    {
      "ac": 12,
      "damage": "1d6+1",
      "drops": [
        "dagger",
      ],
      "goldDrop": 9,
      "hp": 11,
      "id": "bandit_camp#1",
      "name": "Bandit Ruffian",
      "toHit": 3,
      "xp": 25,
    },
    {
      "ac": 13,
      "attackReachFt": 80,
      "damage": "1d8+1",
      "drops": [
        "shortsword",
      ],
      "goldDrop": 10,
      "hp": 11,
      "id": "bandit_camp#2",
      "name": "Bandit Bowman",
      "toHit": 4,
      "xp": 50,
    },
  ],
  "bandit_tent": [
    {
      "ac": 15,
      "con": 14,
      "damage": "1d8+3",
      "dex": 16,
      "drops": [
        "studded_leather",
        "healing_potion",
      ],
      "goldDrop": 60,
      "hp": 52,
      "id": "bandit_tent#0",
      "multiattack": 2,
      "name": "Bandit Captain",
      "str": 15,
      "toHit": 5,
      "xp": 450,
    },
    {
      "ac": 12,
      "damage": "1d6+1",
      "drops": [
        "dagger",
      ],
      "goldDrop": 9,
      "hp": 11,
      "id": "bandit_tent#1",
      "name": "Bandit Ruffian",
      "toHit": 3,
      "xp": 25,
    },
  ],
  "dungeon_antechamber": [
    {
      "ac": 13,
      "condition_immunities": [
        "poisoned",
        "exhaustion",
      ],
      "damage": "1d6+2",
      "goldDrop": 3,
      "hp": 13,
      "id": "dungeon_antechamber#0",
      "immunities": [
        "poison",
      ],
      "name": "Skeleton Warrior",
      "resistances": [
        "piercing",
      ],
      "toHit": 4,
      "vulnerabilities": [
        "bludgeoning",
      ],
      "xp": 50,
    },
  ],
  "dungeon_charnel_hall": [
    {
      "ac": 13,
      "condition_immunities": [
        "poisoned",
        "exhaustion",
      ],
      "damage": "1d6+2",
      "goldDrop": 3,
      "hp": 13,
      "id": "dungeon_charnel_hall#0",
      "immunities": [
        "poison",
      ],
      "name": "Skeleton Warrior",
      "resistances": [
        "piercing",
      ],
      "toHit": 4,
      "vulnerabilities": [
        "bludgeoning",
      ],
      "xp": 50,
    },
    {
      "ac": 13,
      "condition_immunities": [
        "poisoned",
        "exhaustion",
      ],
      "damage": "1d6+2",
      "goldDrop": 3,
      "hp": 13,
      "id": "dungeon_charnel_hall#1",
      "immunities": [
        "poison",
      ],
      "name": "Skeleton Warrior",
      "resistances": [
        "piercing",
      ],
      "toHit": 4,
      "vulnerabilities": [
        "bludgeoning",
      ],
      "xp": 50,
    },
  ],
  "dungeon_crypt_throne": [
    {
      "ac": 17,
      "cha": 16,
      "con": 18,
      "condition_immunities": [
        "charmed",
        "exhaustion",
        "frightened",
        "paralyzed",
        "poisoned",
      ],
      "cr": 5,
      "damage": "2d6+4",
      "damageType": "necrotic",
      "dex": 10,
      "drops": [
        "healing_potion",
        "healing_potion",
      ],
      "goldDrop": 120,
      "hp": 97,
      "id": "dungeon_crypt_throne#0",
      "immunities": [
        "poison",
        "necrotic",
      ],
      "int": 11,
      "multiattack": 2,
      "name": "Crypt Lord",
      "onHitEffect": {
        "ability": "wis",
        "condition": "frightened",
        "dc": 13,
      },
      "phases": [
        {
          "effects": [
            {
              "kind": "set_to_hit",
              "value": 9,
            },
            {
              "dice": "2d8+4",
              "kind": "set_damage",
            },
            {
              "effect": {
                "ability": "wis",
                "condition": "frightened",
                "dc": 15,
              },
              "kind": "set_on_hit_effect",
            },
          ],
          "hpPct": 50,
          "name": "Wrath of the Sealed Tomb",
          "narrative": "Bone splinters erupt from the floor around the Crypt Lord — its eye-sockets blaze. 'You will not silence me again!'",
        },
        {
          "effects": [
            {
              "amount": 25,
              "kind": "heal",
            },
            {
              "dice": "3d6+4",
              "kind": "set_damage",
            },
            {
              "kind": "set_ac",
              "value": 18,
            },
          ],
          "hpPct": 25,
          "name": "Phylactery Crack",
          "narrative": "A black gem in its breastplate fractures. Necrotic light pours into the Crypt Lord — its wounds knit closed and it lunges with renewed fury.",
        },
      ],
      "resistances": [
        "bludgeoning",
        "piercing",
        "slashing",
      ],
      "str": 18,
      "toHit": 7,
      "wis": 10,
      "xp": 1800,
    },
    {
      "ac": 13,
      "condition_immunities": [
        "poisoned",
        "exhaustion",
      ],
      "damage": "1d6+2",
      "goldDrop": 3,
      "hp": 13,
      "id": "dungeon_crypt_throne#minion_a",
      "immunities": [
        "poison",
      ],
      "name": "Skeleton Warrior",
      "resistances": [
        "piercing",
      ],
      "toHit": 4,
      "vulnerabilities": [
        "bludgeoning",
      ],
      "xp": 50,
    },
  ],
  "dungeon_offering_chamber": [
    {
      "ac": 13,
      "condition_immunities": [
        "poisoned",
        "charmed",
      ],
      "damage": "2d6+2",
      "goldDrop": 8,
      "hp": 22,
      "id": "dungeon_offering_chamber#0",
      "name": "Crypt Ghoul",
      "onHitEffect": {
        "ability": "con",
        "condition": "paralyzed",
        "dc": 10,
      },
      "toHit": 4,
      "xp": 200,
    },
  ],
  "dungeon_ossuary": [
    {
      "ac": 13,
      "condition_immunities": [
        "poisoned",
        "charmed",
      ],
      "damage": "2d6+2",
      "goldDrop": 8,
      "hp": 22,
      "id": "dungeon_ossuary#0",
      "name": "Crypt Ghoul",
      "onHitEffect": {
        "ability": "con",
        "condition": "paralyzed",
        "dc": 10,
      },
      "toHit": 4,
      "xp": 200,
    },
  ],
  "dungeon_shadow_gallery": [
    {
      "ac": 12,
      "condition_immunities": [
        "exhaustion",
        "frightened",
        "grappled",
        "paralyzed",
        "petrified",
        "poisoned",
        "prone",
        "restrained",
      ],
      "damage": "2d6+2",
      "hp": 16,
      "id": "dungeon_shadow_gallery#0",
      "immunities": [
        "necrotic",
        "poison",
      ],
      "name": "Shadow",
      "resistances": [
        "acid",
        "fire",
        "thunder",
        "lightning",
        "cold",
        "bludgeoning",
        "piercing",
        "slashing",
      ],
      "toHit": 4,
      "xp": 100,
    },
  ],
  "grove_entrance": [
    {
      "ac": 13,
      "cha": 8,
      "con": 12,
      "damage": "2d4+2",
      "dex": 15,
      "hp": 11,
      "id": "grove_entrance#0",
      "int": 10,
      "name": "Awakened Wolf",
      "str": 12,
      "toHit": 4,
      "wis": 12,
      "xp": 50,
    },
    {
      "ac": 13,
      "cha": 8,
      "con": 12,
      "damage": "2d4+2",
      "dex": 15,
      "hp": 11,
      "id": "grove_entrance#1",
      "int": 10,
      "name": "Awakened Wolf",
      "str": 12,
      "toHit": 4,
      "wis": 12,
      "xp": 50,
    },
  ],
  "old_road": [
    {
      "ac": 12,
      "damage": "1d6+1",
      "drops": [
        "dagger",
      ],
      "goldDrop": 8,
      "hp": 11,
      "id": "old_road#0",
      "name": "Bandit Ruffian",
      "toHit": 3,
      "xp": 25,
    },
    {
      "ac": 12,
      "damage": "1d6+1",
      "drops": [
        "dagger",
      ],
      "goldDrop": 8,
      "hp": 11,
      "id": "old_road#1",
      "name": "Bandit Ruffian",
      "toHit": 3,
      "xp": 25,
    },
  ],
  "pass_climb": [
    {
      "ac": 13,
      "damage": "1d6+1",
      "hp": 11,
      "id": "pass_climb#0",
      "name": "Frost Wolf",
      "resistances": [
        "cold",
      ],
      "toHit": 4,
      "xp": 50,
    },
    {
      "ac": 13,
      "damage": "1d6+1",
      "hp": 11,
      "id": "pass_climb#1",
      "name": "Frost Wolf",
      "resistances": [
        "cold",
      ],
      "toHit": 4,
      "xp": 50,
    },
  ],
  "spire_cult_chamber": [
    {
      "ac": 12,
      "damage": "1d8+1",
      "hp": 17,
      "id": "spire_cult_chamber#0",
      "name": "Frost Cultist",
      "resistances": [
        "cold",
      ],
      "toHit": 3,
      "xp": 100,
    },
    {
      "ac": 12,
      "damage": "1d8+1",
      "hp": 17,
      "id": "spire_cult_chamber#1",
      "name": "Frost Cultist",
      "resistances": [
        "cold",
      ],
      "toHit": 3,
      "xp": 100,
    },
  ],
  "spire_frozen_hall": [
    {
      "ac": 11,
      "condition_immunities": [
        "poisoned",
      ],
      "damage": "1d4+2",
      "hp": 21,
      "id": "spire_frozen_hall#0",
      "immunities": [
        "cold",
      ],
      "name": "Ice Mephit",
      "toHit": 4,
      "vulnerabilities": [
        "fire",
      ],
      "xp": 100,
    },
    {
      "ac": 11,
      "condition_immunities": [
        "poisoned",
      ],
      "damage": "1d4+2",
      "hp": 21,
      "id": "spire_frozen_hall#1",
      "immunities": [
        "cold",
      ],
      "name": "Ice Mephit",
      "toHit": 4,
      "vulnerabilities": [
        "fire",
      ],
      "xp": 100,
    },
  ],
  "spire_ritual_apex": [
    {
      "ac": 15,
      "condition_immunities": [
        "frightened",
        "paralyzed",
      ],
      "damage": "2d6+3",
      "hp": 78,
      "id": "spire_ritual_apex#boss",
      "immunities": [
        "poison",
      ],
      "multiattack": 2,
      "name": "Frost Acolyte",
      "onHitEffect": {
        "ability": "con",
        "condition": "paralyzed",
        "dc": 13,
      },
      "phases": [
        {
          "effects": [
            {
              "kind": "set_ac",
              "value": 17,
            },
            {
              "dice": "2d8+3",
              "kind": "set_damage",
            },
          ],
          "hpPct": 60,
          "name": "Ice Armor",
          "narrative": "The Acolyte hisses a hard syllable and frost rimes their robes — blows skid off. Around them the ritual flame burns colder.",
        },
        {
          "effects": [
            {
              "kind": "set_to_hit",
              "value": 8,
            },
            {
              "kind": "set_multiattack",
              "value": 3,
            },
            {
              "effect": {
                "ability": "con",
                "condition": "paralyzed",
                "dc": 15,
              },
              "kind": "set_on_hit_effect",
            },
          ],
          "hpPct": 30,
          "name": "Frostbinding",
          "narrative": "The Acolyte tears off their frost cloak. Black ice spreads beneath their feet. Their staff lashes with bone-cold speed.",
        },
      ],
      "resistances": [
        "cold",
      ],
      "toHit": 6,
      "vulnerabilities": [
        "fire",
      ],
      "xp": 1100,
    },
  ],
  "thornwood_maze": [
    {
      "ac": 14,
      "cha": 4,
      "con": 11,
      "damage": "1d8",
      "dex": 16,
      "hp": 13,
      "id": "thornwood_maze#0",
      "int": 2,
      "name": "Giant Spider",
      "onHitEffect": {
        "ability": "con",
        "condition": "poisoned",
        "dc": 11,
      },
      "str": 8,
      "toHit": 5,
      "wis": 11,
      "xp": 100,
    },
    {
      "ac": 14,
      "cha": 4,
      "con": 11,
      "damage": "1d8",
      "dex": 16,
      "hp": 13,
      "id": "thornwood_maze#1",
      "int": 2,
      "name": "Giant Spider",
      "onHitEffect": {
        "ability": "con",
        "condition": "poisoned",
        "dc": 11,
      },
      "str": 8,
      "toHit": 5,
      "wis": 11,
      "xp": 100,
    },
  ],
}
`;
